<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="application_name">Launcher</string>
    <string name="home">Home</string>
    <string name="uid_name">Android Core Apps</string>
    <string name="folder_name"></string>
    <string name="chooser_wallpaper">Choose wallpaper from</string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="pick_wallpaper">Wallpapers</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="widgets_tab_label">Widgets</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="market">Shop</string>
    <string name="widget_dims_format" translatable="false">%1$d x %2$d</string>
    <string name="external_drop_widget_pick_format" translatable="false">%1$s (%2$d x %3$d)</string>
    <string name="external_drop_widget_error">Couldn\'t drop item on this Home screen.</string>
    <string name="external_drop_widget_pick_title">Choose widget to create</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="menu_item_add_item">Add to Home screen</string>
    <string name="group_applications">Apps</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_widgets">Widgets</string>
    <string name="group_wallpapers">Wallpapers</string>
    <string name="completely_out_of_space">No more room on your Home screens.</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room on the hotseat.</string>
    <string name="invalid_hotseat_item">This widget is too large for the hotseat.</string>
    <string name="shortcut_installed">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" created.</string>
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" was removed.</string>
    <string name="shortcut_duplicate">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" already exists.</string>
    <string name="title_select_shortcut">Choose shortcut</string>
    <string name="title_select_application">Choose app</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="delete_zone_label_workspace">Remove</string>
    <string name="delete_zone_label_all_apps">Uninstall</string>
    <string name="delete_target_label">Remove</string>
    <string name="delete_target_uninstall_label">Uninstall</string>
    <string name="info_target_label">App info</string>
    <string name="accessibility_search_button">Search</string>
    <string name="accessibility_voice_search_button">Voice Search</string>
    <string name="accessibility_all_apps_button">Apps</string>
    <string name="accessibility_delete_button">Remove</string>
    <string name="delete_zone_label_all_apps_system_app">Uninstall update</string>
    <string name="menu_add">Add</string>
    <string name="menu_manage_apps">Manage apps</string>
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">System settings</string>
    <string name="menu_help">Help</string>
    <string name="help_url" translatable="false"></string>
    <string name="cab_menu_delete_app">Uninstall app</string>
    <string name="cab_menu_app_info">App details</string>
    <string name="cab_app_selection_text">1 app selected</string>
    <string name="cab_widget_selection_text">1 widget selected</string>
    <string name="cab_folder_selection_text">1 folder selected</string>
    <string name="cab_shortcut_selection_text">1 shortcut selected</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows the app to remove
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in Home.</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="dream_name">Rocket Launcher</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="workspace_description_format">Home screen %1$d</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="apps_customize_apps_scroll_format">Apps page %1$d of %2$d</string>
    <string name="apps_customize_widgets_scroll_format">Widgets page %1$d of %2$d</string>
    <string name="workspace_cling_title">Make yourself at home</string>
    <string name="workspace_cling_move_item">You can put your favorite apps here.</string>
    <string name="workspace_cling_open_all_apps">To see all your apps, touch the circle.</string>
    <string name="all_apps_cling_title">Choose some apps</string>
    <string name="all_apps_cling_add_item">To add an app to your Home screen, touch &amp; hold it.</string>
    <string name="folder_cling_title">Organize your apps with folders</string>
    <string name="folder_cling_move_item">To move an app, touch &amp; hold it.</string>
    <string name="folder_cling_create_folder">To make a new folder on your Home screen, stack one app on top of another.</string>
    <string name="cling_dismiss">OK</string>
    <string name="default_folder_name"></string>
    <string name="folder_opened">Folder opened, <xliff:g id="width" example="5">%1$d</xliff:g> by <xliff:g id="height" example="3">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Touch to close folder</string>
    <string name="folder_tap_to_rename">Touch to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="folder_name_format">Folder: <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="custom_workspace_cling_title_1"></string>
    <string name="custom_workspace_cling_description_1"></string>
    <string name="custom_workspace_cling_title_2"></string>
    <string name="custom_workspace_cling_description_2"></string>
    <string name="app_name">MyLauncher</string>
    <string name="launcher_long_click_dialog_title">Choose</string>
    <string name="launcher_long_click_dialog_item_one">Widget</string>
    <string name="launcher_long_click_dialog_item_two">Wallpaper</string>
    <string name="launcher_add_widget_error">add widget fail</string>
    <string name="launcher_add_widget">widget</string>
    <string name="class_mode">Class Mode</string>
    <string name="app_list">App List</string>
    <string name="register_title">注册过程</string>
    <string name="register_step3_title">第三步：将该应用设置为默认启动器</string>
    <string name="register_step3_remarks">只有设置为默认启动器，才能实现管控功能</string>
    <string name="register_step3_set">设置默认启动器</string>
    <string name="register_step3_set_hint">提示：请选择“成长守护”，并点“始终”</string>
    <string name="register_step3_set_miui_hint">提示：请先点“桌面”，后点“成长守护”</string>
    <string name="register_step3_cancel">取消默认启动器</string>
    <string name="register_step3_cancel_hint">提示：请在“默认启动”中点“清除默认设置”</string>
    <string name="register_step3_cancel_miui_hint">提示：请先点“桌面”，后点“成长守护”</string>
    <string name="always">始终</string>
    <string name="once">仅此一次</string>
    <string name="clear_default">清除默认设置</string>
    <string name="register_finish">完成注册过程</string>
    <string-array name="emergency_call_number_list">
        <item>110</item>
        <item>119</item>
        <item>120</item>
        <item>122</item>
    </string-array>
    <string-array name="emergency_call_name_list">
        <item>报警电话</item>
        <item>火警报警</item>
        <item>急救中心</item>
        <item>交通事故报警</item>
    </string-array>
    <string name="emergency_contact">紧急电话/通讯录</string>
    <string name="emergency_list_title">紧急电话</string>
    <string name="contact_list_title">通讯录</string>
    <string name="string_ok">是</string>
    <string name="string_cancel">否</string>
    <string name="make_call_message_fmt" formatted="false">拨打%s: %s</string>
    <string name="app_forbidden">%s已被禁止</string>
    <string name="current_monitor_time" formatted="false">此次学习时间：%s-%s</string>
    <string name="update_download_title">成长守护（孩子端）</string>
    <string name="update_download_desc">下载中……</string>
    <string name="update_confirm_dialog_message">新版本:</string>
    <string name="string_download_backend">升级</string>
    <string name="string_say_later">以后再说</string>
    <string name="string_download_backend_again">重试</string>
    <string name="update_confirm_dialog_error_message">暂时无法升级,请稍后重试</string>
    <string name="update_already_new">当前版本已是最新，不需要升级</string>
    <string name="setting_activity_title">设置</string>
    <string name="setting_activity_about">成长守护</string>
    <string name="setting_network_title">无线和网络</string>
    <string name="mobile_network_setting">移动网络</string>
    <string name="wifi_setting">WLAN</string>
    <string name="bluetooth_setting">蓝牙</string>
    <string name="setting_persona_title">个人</string>
    <string name="call_setting">通话设置</string>
    <string name="sound_setting">声音</string>
    <string name="ringstone_setting">铃声</string>
    <string name="alarm_setting">闹钟</string>
    <string name="display_setting">显示</string>
    <string name="lang_keyboard_setting">语言与键盘</string>
    <string name="pwd_setting">屏幕密码设置</string>
    <string name="setting_system_title">系统设置</string>
    <string name="app_setting">应用管理</string>
    <string name="about_setting">关于手机</string>
    <string name="uninstall_button_text">卸 载</string>
    <string name="app_version_data_text_fmt" formatted="false">%s MB | V%s</string>
    <string name="verion_info">版本信息</string>
    <string name="contact_label">通讯录</string>
    <string name="phone_label">拨号</string>
    <string name="message_label">信息</string>
    <string name="safe_browser_label">安全浏览器</string>
    <string name="no_sdcard_toast">未检测到SD卡,无法下载</string>
    <string name="start_check_update">开始检查更新，请稍候</string>
    <string name="do_no_check_update_repeat">已经在检查更新，请稍候</string>
    <string name="update_download_manager_disabled">下载管理器已被禁用，请在设置->应用程序中启动下载管理器</string>
    <string-array name="system_filter_permission_list">
        <item>android.permission.MOUNT_UNMOUNT_FILESYSTEMS</item>
        <item>android.permission.ACCESS_CACHE_FILESYSTEM</item>
        <item>android.permission.CHANGE_CONFIGURATION</item>
        <item>android.permission.CONNECTIVITY_INTERNAL</item>
        <item>android.permission.STATUS_BAR</item>
        <item>android.permission.WRITE_MEDIA_STORAGE</item>
        <item>android.permission.ACCESS_MTK_MMHW</item>
        <item>android.permission.CAPTURE_AUDIO_OUTPUT</item>
        <item>android.permission.REBOOT</item>
        <item>android.permission.INSTALL_PACKAGES</item>
        <item>android.permission.BACKUP</item>
        <item>android.permission.SHUTDOWN</item>
    </string-array>
    <string name="keyguard_info_message">当前手机处于学习模式，手机将在下课后自动退出学习模式。</string>
</resources>